--- a/src/App.scss
+++ b/src/App.scss
@@ -9,6 +9,10 @@ html,
 	height: 100%;
 	background: #f4f4f4;
 
+	a {
+		text-decoration: none;
+	}
+
 	.layout {
 		// height: 100%;
 		// display: flex;
